--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Titulo Nuevo Modificado</h1>
     <form action="#" method="GET">
+        <input type="text" />
         <input type="button" value="enviar" />
     </form>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque adipisci recusandae, ullam unde odit magnam exercitationem illum eaque asperiores voluptates officiis ratione rem mollitia culpa quasi iste qui laboriosam eos!</p>
